# dllm

./: .gitignore  README.md  chat.py  model.py  pyproject.toml  train.py
checkpoints/: tokenizer.json
data/: sample.txt
