[project]
name = "simple-chat-model"
version = "0.1.0"
description = "Minimal conversational model with training and chat scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
